force-app/main/default/objects/TriggerSetting__mdt/TriggerSetting__mdt.object-meta.xml
<CustomObject>
    <description>Custom metadata that allows dynamically disabling triggers in the org.</description>
    <label>TriggerSetting</label>
    <pluralLabel>TriggerSettings</pluralLabel>
</CustomObject>