force-app/main/default/objects/TriggerSetting__mdt/fields/DisableDelete__c.field-meta.xml
<CustomField>
    <fullName>DisableDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this to disable Delete events on this trigger. If only DisableDelete is checked, no Delete events will fire. If DisableBefore is checked AND DisableDelete is checked, then no Before Delete events will fire, but Before Insert events will still fire.</description>
    <inlineHelpText>Check this to disable Delete events on this trigger. If only DisableDelete is checked, no Delete events will fire. If DisableBefore is checked AND DisableDelete is checked, then no Before Delete events will fire, but Before Insert events will still fire.</inlineHelpText>
    <label>DisableDelete</label>
    <type>Checkbox</type>
</CustomField>