force-app/main/default/objects/TriggerSetting__mdt/fields/DisableInsert__c.field-meta.xml
<CustomField>
    <fullName>DisableInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this to disable Insert events on this trigger. If only DisableInsert is checked, no Insert events will fire. If DisableAfter is checked AND DisableInsert is checked, then no After Insert events will fire, but After Update events will still fire.</description>
    <inlineHelpText>Check this to disable Insert events on this trigger. If only DisableInsert is checked, no Insert events will fire. If DisableAfter is checked AND DisableInsert is checked, then no After Insert events will fire, but After Update events will still fire.</inlineHelpText>
    <label>DisableInsert</label>
    <type>Checkbox</type>
</CustomField>