force-app/main/default/objects/TriggerSetting__mdt/fields/DisableUpdate__c.field-meta.xml
<CustomField>
    <fullName>DisableUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this to disable Update events on this trigger. If only DisableUpdate is checked, no Update events will fire. If DisableAfter is checked AND DisableUpdate is checked, then no After Update events will fire, but After Insert events will still fire.</description>
    <inlineHelpText>Check this to disable Update events on this trigger. If only DisableUpdate is checked, no Update events will fire. If DisableAfter is checked AND DisableUpdate is checked, then no After Update events will fire, but After Insert events will still fire.</inlineHelpText>
    <label>DisableUpdate</label>
    <type>Checkbox</type>
</CustomField>