force-app/main/default/objects/TriggerSetting__mdt/fields/DisableUserName__c.field-meta.xml
<CustomField>
    <fullName>DisableUserName__c</fullName>
    <description>If you enter a UserName here, this record will ONLY apply to triggers initiated by this User. If this is blank, then this record will apply to all Users.</description>
    <inlineHelpText>If you enter a UserName here, this record will ONLY apply to triggers initiated by this User. If this is blank, then this record will apply to all Users.</inlineHelpText>
    <label>DisableUserName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>