force-app/main/default/objects/TriggerSetting__mdt/fields/ExemptUserName__c.field-meta.xml
<CustomField>
    <fullName>ExemptUserName__c</fullName>
    <description>If DisableUserName is blank, then a value in this field will exempt this user from the application of this record.</description>
    <inlineHelpText>If DisableUserName is blank, then a value in this field will exempt this user from the application of this record.</inlineHelpText>
    <label>ExemptUserName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>